# escpos-virtual-printer-emulator

./: Cargo.toml
resources/: macos_generic_text.ppd
src/: main.rs
src/escpos/: commands.rs  parser.rs  printer.rs
src/gui/: app.rs  receipt_viewer.rs  settings_panel.rs
src/networking/: server.rs
